# CppLib

./: .gitignore  CMakeLists.txt  LICENSE  README.md
3rd/: colorprintf.h  stacktrace.cpp  stacktrace.h
3rd/rapidxml/: rapidxml.hpp  rapidxml_print.hpp
config/: test.xml  test2.xml  test3.xml
lib/Socket/: Socket.cpp  Socket.h
lib/Thread/: Mutex.cpp  Mutex.h  Semaphore.cpp  Semaphore.h  Thread.cpp  Thread.h  ThreadQueue.h
lib/common/: BackTrace.cpp  BackTrace.h  Heap.h  IsUTF8.cpp  IsUTF8.h  NoCopy.h  Node.cpp  Node.h  ObjectArray.h  OptHandler.cpp  OptHandler.h  Sleep.h  array_functions.h  clock_functions.h  other_functions.cpp  other_functions.h  other_macros.h  other_templates.h  rawqueue.h  serialize.h  string_functions.cpp  string_functions.h
lib/config/: XmlHandler.cpp  XmlHandler.h  XmlReader.cpp  XmlReader.h
lib/db/: MySqlHandler.cpp  MySqlHandler.h  MySqlOpStruct.cpp  MySqlOpStruct.h  MySqlTable.cpp  MySqlTable.h
lib/framework/: IModule.h  ModuleManager.cpp  ModuleManager.h
lib/ipc/: IMsgQCallback.h  MsgQueue.cpp  MsgQueue.h
lib/log/: LogAgent.cpp  LogAgent.h  LogHandler.cpp  LogHandler.h  Logger.cpp  Logger.h
lib/memory/: MemoryLogger.cpp  MemoryLogger.h  MemoryPool.cpp  MemoryPool.h  ThreadMemoryPool.cpp  (+1 more)
test/: main.cpp  test_Epoll.cpp  test_Epoll.h  test_Heap.cpp  test_Heap.h  test_Logger.cpp  test_Logger.h  test_Memory.cpp  test_Memory.h  test_ModuleManager.cpp  test_ModuleManager.h  test_MsgQueue.cpp  test_MsgQueue.h  test_MySqlHandler.cpp  test_MySqlHandler.h  test_ObjectArray.cpp  test_ObjectArray.h  test_OptHandler.cpp  test_OptHandler.h  test_Thread.cpp  test_Thread.h  test_ThreadQueue.cpp  test_ThreadQueue.h  test_XmlHandler.cpp  test_XmlHandler.h  test_other_functions.cpp  test_other_functions.h  test_string_functions.cpp  test_string_functions.h
tools/: CMakeLists.txt  isutf8.cpp
(+38 files in other folders)
